[project]
name = "abistep-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.0.0",
    "pytest>=8.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
